<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect"
    tools:context=".CricketScore">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/t1"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@id/t2"
        android:textColor="#ffff"
        android:textAlignment="center"
        android:fontFamily="@font/black_ops_one"
        android:textSize="24sp"
        android:layout_toStartOf="@id/t2" />
    <TextView
        android:id="@+id/t2"
        android:layout_marginTop="12dp"
        android:background="@drawable/circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/vs"
        android:textColor="#ffff"
        android:paddingTop="8dp"
        android:textAlignment="center"
        android:textSize="26sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/t3"
        android:textAlignment="center"
        android:layout_toRightOf="@+id/t2"
        android:fontFamily="@font/black_ops_one"
        android:textColor="#ffff"
        android:textSize="24sp"
        android:layout_toEndOf="@+id/t2" />
    <View
        android:layout_marginTop="17dp"
        android:id="@+id/view"
        android:layout_below="@id/t3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toss"
        android:text="@string/toss"
        android:layout_below="@+id/view"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />
    <LinearLayout
        android:layout_below="@+id/toss"
        android:id="@+id/ll"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/cb1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"/>
    <RadioButton
        android:id="@+id/cb2"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>


    </LinearLayout>
    <View
        android:layout_marginTop="17dp"
        android:id="@+id/view1"
        android:layout_below="@id/ll"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_below="@+id/view1"
        android:id="@+id/llnew"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginStart="15dp">
        <TextView
            android:layout_width="0dp"
            android:id="@+id/summary1"
            android:textSize="30sp"
            android:text="Target:"
            android:fontFamily="@font/bangers"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"/>
        <TextView
            android:textSize="30sp"
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bangers"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <View
        android:layout_marginTop="17dp"
        android:id="@+id/view2"
        android:layout_below="@id/llnew"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/bangers"
        android:textSize="25sp" />
        <TextView
            android:id="@+id/card"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:textSize="75sp"
            android:text="@string/initial"
            android:shadowColor="@color/black"
            android:textColor="#fff"
            android:background="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp" />
        <TextView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:textSize="75sp"
            android:text="@string/slash"
            android:shadowColor="@color/black"
            android:textColor="#fff"
            android:background="#000000"
            android:layout_marginTop="10dp"
            android:layout_below="@id/score"
            android:layout_toRightOf="@+id/card"
            android:layout_toEndOf="@+id/card" />
    <TextView
        android:id="@+id/wkt"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="75sp"
        android:text="@string/initial"
        android:shadowColor="@color/black"
        android:textColor="#fff"
        android:background="#000000"
        android:layout_marginTop="10dp"
        android:layout_below="@id/score"
        android:layout_toRightOf="@+id/card1"
        android:layout_toEndOf="@+id/card1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overs"
        android:id="@+id/tv"
        android:textSize="20sp"
        android:layout_marginTop="110dp"
        android:layout_below="@+id/view2"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@id/wkt"
        android:layout_toEndOf="@id/wkt"
        android:layout_marginStart="50dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial"
        android:id="@+id/tv1"
        android:textSize="20sp"
        android:layout_marginTop="110dp"
        android:layout_below="@+id/view2"
        android:layout_toRightOf="@id/tv"
        android:layout_toEndOf="@id/tv" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:id="@+id/tv11"
        android:textSize="20sp"
        android:layout_marginTop="110dp"
        android:layout_below="@+id/view2"
        android:layout_toRightOf="@id/tv1"
        android:layout_toEndOf="@id/tv1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial"
        android:id="@+id/tv12"
        android:textSize="20sp"
        android:layout_marginTop="110dp"
        android:layout_below="@+id/view2"
        android:layout_toRightOf="@id/tv11"
        android:layout_toEndOf="@id/tv11" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv2"
        android:textSize="20sp"
        android:layout_marginTop="110dp"
        android:layout_below="@+id/view2"
        android:layout_toRightOf="@id/tv12"
        android:layout_toEndOf="@id/tv12" />

    <View
        android:layout_marginTop="17dp"
        android:id="@+id/view3"
        android:layout_below="@id/card"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <Button
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/zero"
        android:text="0"
        android:textSize="19sp"
        android:textColor="#ffff"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/view3"
        android:background="@drawable/circle"
        android:layout_marginStart="30dp"
        />

    <Button
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/one"
        android:layout_toRightOf="@+id/zero"
        android:text="@string/_1"
        android:textSize="19sp"
        android:textColor="#ffff"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/view3"
        android:background="@drawable/circle"

        />

    <Button
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/two"
        android:text="@string/_2"
        android:layout_toRightOf="@id/one"
        android:textSize="19sp"
        android:textColor="#ffff"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/view3"
        android:background="@drawable/circle"
        android:layout_toEndOf="@id/one"
         />

    <Button
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/three"
        android:text="@string/_3"
        android:layout_toRightOf="@id/two"
        android:textSize="19sp"
        android:textColor="#ffff"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/view3"
        android:background="@drawable/circle"
        android:layout_toEndOf="@id/two" />

    <Button
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/four"
        android:text="@string/_4"
        android:layout_toRightOf="@id/three"
        android:textSize="19sp"
        android:textColor="#ffff"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/view3"
        android:background="@drawable/circle"
        android:layout_toEndOf="@id/three"
         />

    <Button
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/five"
        android:text="@string/_5"
        android:layout_toRightOf="@id/four"
        android:textSize="19sp"
        android:textColor="#ffff"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/view3"
        android:background="@drawable/circle"

        android:layout_toEndOf="@id/four" />

    <Button
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/six"
        android:text="@string/_6"
        android:layout_toRightOf="@id/five"
        android:textSize="19sp"
        android:textColor="#ffff"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/view3"
        android:background="@drawable/circle"
        android:layout_toEndOf="@id/five" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/finall"
        android:layout_marginTop="15dp"
        android:layout_below="@id/six"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wide_ball"
            android:id="@+id/wide"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="0dp"
            android:id="@+id/noball"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/noball"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="0dp"
            android:id="@+id/wicket"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="WICKET"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btn"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/finall"
        android:fontFamily="@font/bangers"
        android:clickable="true"
        />
</RelativeLayout>
