<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg2"
    tools:context=".Cricket">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="30sp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/enter_team_names"
        android:textColor="#24626B "
        android:textSize="31sp" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:autofillHints="Team1"
        android:backgroundTint="#24626B"
        android:hint="@string/team_1"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:textColor="#24626B "
        android:textColorHint="#1E3336" />
    <TextView
        android:layout_below="@id/et1"
        android:layout_marginTop="20dp"
        android:id="@+id/text2"
        android:background="@drawable/circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/vs"
        android:paddingTop="8dp"
        android:textAlignment="center"
        android:textSize="26sp"/>

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:autofillHints="Team2"
        android:backgroundTint="#24626B"
        android:hint="@string/team_2"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:textColor="#24626B "
        android:textColorHint="#1E3336" />
    <View
        android:layout_marginTop="20dp"
        android:id="@+id/view"
        android:layout_below="@id/et2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/black_ops_one"
        android:text="ENTER MATCH TIME "
        android:textColor="#24626B "
        android:textSize="31sp" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:autofillHints="10"
        android:backgroundTint="#24626B "
        android:hint="Match Time"
        android:importantForAutofill="yes"
        android:inputType="number"
        android:textColor="#24626B "
        android:textColorHint="#1E3336" />
    <View
        android:layout_marginTop="20dp"
        android:id="@+id/view1"
        android:layout_below="@id/et3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <Button
        android:id="@+id/bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"

        android:background="#1E3336"
        android:text="@string/submit"
        android:textColor="#24626B " />
</RelativeLayout>